# Ember

./: .travis.yml  CMakeLists.txt
docs/: Game Protocol.md
protocols/grunt/: ClientLoginChallenge.spark  ClientLoginProof.spark  RequestRealmList.spark
src/: CMakeLists.txt
src/login/: CMakeLists.txt  GameVersion.h  LoginHandler.cpp  LoginHandler.h  LoginPacketCheck.cpp  PatchCache.cpp  Protocol.h  main.cpp
src/shared/spark/: CMakeLists.txt
src/shared/spark/include/spark/: BinaryStream.h  Buffer.h  BufferChain.h  BufferChainNode.h  Handler.h  Link.h  Message.h  Result.h  RouteConfig.h  Server.h  Types.h
src/shared/spark/src/: BufferChain.cpp  Server.cpp
src/sparktest/: CMakeLists.txt  Player.cpp  Player.h  PlayerDamage.h  README.md  TestProtocol.h  TestServer.cpp  TestServer.h  TestService.cpp  TestService.h  main.cpp
src/sparktest/protocol/: PlayerDamage.h  PlayerHeal.cpp  PlayerHeal.h
tests/: Buffer.cpp  BufferChain.cpp  BufferChainNode.cpp  CMakeLists.txt
